--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -2,16 +2,29 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="./style.css">
-</head>
-
-<body>
     <script type="text/javascript" src="./script.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha384-1H217gwSVyLSIfaLxHbE7dRb3v4mYCKbpQvzx0cegeju1MVsGrX5xXxAvs/HgeFs" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.14.0/jquery-ui.min.js" integrity="sha384-8EM386r8XMMzwGPUxfGNr6c1wIOYnPQBJ6VFxzKCZeklpQarHoZGB40kdNDA3gYr" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/ui-darkness/jquery-ui.css" integrity="sha384-wlGrpvMYH2p8rHQJ8Q5A59TCpbRuhEkTKPlG19lfX3k2vL4NGTBUswpzdkg4eKrq" crossorigin="anonymous">
-    <h1>Peekaboo</h1>
-    <p>kdsj kdfsjk</p>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/cupertino/jquery-ui.css" integrity="sha384-wlGrpvMYH2p8rHQJ8Q5A59TCpbRuhEkTKPlG19lfX3k2vL4NGTBUswpzdkg4eKrq" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <title>Peekaboo</title>
+</head>
+
+<body>
+    <h1 id="header" onclick="changeBackground()">Peekaboo</h1>
+    <input type="text" class="form-control" id="query" placeholder="Search the web" onkeypress="checkEnter(event)">
+    
+    <button onclick="search()" class="btn btn-primary">Search</button> 
+    <button onclick="displayTime()" class="btn btn-secondary">Show Current Time</button> 
+    <button onclick="lucky()" class="btn btn-secondary">I'm feeling lucky</button> 
+
+    <div id="time"></div> 
+    <div id="searchResults"></div> 
+
 </body>
 
 </html>
